Combine Requirements Using My Script & Use Minified Versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 roboto.css==https://fonts.googleapis.com/css?family=Roboto:300,400
-fontawesome.css==https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css
-angular-material.css==https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.5/angular-material.css
-angular.js==https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular.js
-angular-route.js==https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular-route.js
-angular-animate.js==https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular-animate.js
-angular-aria.js==https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular-aria.js
-angular-messages.js==https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular-messages.js
-angular-sanitize.js==https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular-sanitize.js
-angular-storage.js==https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.js
-angular-material.js==https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.5/angular-material.js
-angular-material-calendar.js==https://cdn.rawgit.com/bradberger/angular-material-calendar/master/dist/angular-material-calendar.js
+fontawesome.css==https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css
+angular-material.css==https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.5/angular-material.min.css
+angular.js==https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular.min.js
+angular-route.js==https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular-route.min.js
+angular-animate.js==https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular-animate.min.js
+angular-aria.js==https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular-aria.min.js
+angular-messages.js==https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular-messages.min.js
+angular-sanitize.js==https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular-sanitize.min.js
+angular-storage.js==https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js
+angular-material.js==https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.5/angular-material.min.js
+angular-material-calendar.js==https://cdn.rawgit.com/bradberger/angular-material-calendar/master/dist/angular-material-calendar.min.js
